--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,10 @@ python = "^3.10.4"
 django = "^4.2.5"
 render-python = "^2.3.0"
 langchain = "^0.0.292"
+dj-database-url = "^2.1.0"
+psycopg2-binary = "^2.9.7"
+whitenoise = {extras = ["brotli"], version = "^6.5.0"}
+gunicorn = "^21.2.0"
 
 
 [build-system]
