--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ psycopg2-binary = "^2.9.7"
 whitenoise = {extras = ["brotli"], version = "^6.5.0"}
 gunicorn = "^21.2.0"
 poetry = "1.1.4"
+openai = "^0.28.0"
 
 
 [build-system]
