--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ whitenoise = {extras = ["brotli"], version = "^6.5.0"}
 gunicorn = "^21.2.0"
 poetry = "1.1.4"
 openai = "^0.28.0"
+python-dotenv = "^1.0.0"
 
 
 [build-system]
